--- a/config/sidekiq_scheduler.yml
+++ b/config/sidekiq_scheduler.yml
@@ -14,6 +14,11 @@ fetch_all_report_worker:
   queue: default
 
 update_story_worker:
-  cron: '0,30 8,9,10,11,12,13,14,15,16,17,18 * * 1-5'
+  cron: '30 7,20 * * 1-5'
   class: UpdateStoryWorker
+  queue: default
+
+update_story_redmine_worker:
+  cron: '0,15,30,45 8,9,10,11,12,13,14,15,16,17,18 * * 1-5'
+  class: UpdateStoryRedmineWorker
   queue: default
