--- a/config/sidekiq_scheduler.yml
+++ b/config/sidekiq_scheduler.yml
@@ -3,8 +3,7 @@ daily_fetch_working_logs:
   class: DailyFetchWorkingLogsWorker
   queue: default
 
-
-create_reportWorker:
+create_eportWorker:
   cron: '0 12 * * 1-5'
   class: CreateReportWorker
   queue: default
