--- a/config/sidekiq_scheduler.yml
+++ b/config/sidekiq_scheduler.yml
@@ -14,7 +14,6 @@ update_reports_worker:
   queue: default
 
 fetch_all_report_worker:
-  cron: '0 20 * * 1-6'
   class: FetchAllReportWorker
   queue: default
 
@@ -23,15 +22,15 @@ update_story_worker:
   class: UpdateStoryWorker
   queue: default
 
-search_all_time_crowd_task_worker:
-  cron: '30 7,12,18 * * 1-5'
-  class: SearchAllTimeCrowdTasksWorker
-  queue: default
+# search_all_time_crowd_task_worker:
+#   cron: '30 7,12,18 * * 1-5'
+#   class: SearchAllTimeCrowdTasksWorker
+#   queue: default
 
-trigger_total_time_crowd_worker:
-  cron: '30 8,10,12,14,16,18 * * 1-5'
-  class: TriggerTotalTimeCrowdWorker
-  queue: default
+# trigger_total_time_crowd_worker:
+#   cron: '30 8,10,12,14,16,18 * * 1-5'
+#   class: TriggerTotalTimeCrowdWorker
+#   queue: default
 
 trigger_update_subject_redmine_worker:
   cron: '0,15,30,45 8,9,10,11,12,13,14,15,16,17,18 * * 1-5'
